--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,8 @@ dependencies = [
   "pandas>=1.5.3", 
   "matplotlib>=3.7.1",
   "ipykernel",
-  "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@v1.0.0"
+  # "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@v1.0.0"
+  "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@develop"
 ]
 
 
