changing more things

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 
-name = "load_balance_analysis_scripts"
+name = "load_balance_analysis"
 # Define the name of your project here. This is mandatory. Once you publish your package for the first time,
 # this name will be locked and associated with your project. It affects how users will
 # install your package via pip, like so:
 
-# $ pip install load_balance_analysis_scripts
+# $ pip install load_balance_analysis
 
 version = "0.1.0"
 # Version numbers should conform to PEP 440, and are also mandatory (but they can be set dynamic)
@@ -83,7 +83,6 @@ dependencies = [
   "pandas>=1.5.3", 
   "matplotlib>=3.7.1",
   "ipykernel",
-  # "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@v1.0.0"
   "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@develop"
 ]
 
