--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 Mark_van_Spronsen/
 data/
 processed_data/normal_csv/
+# processed_data/uncertainty_table/
+# processed_data/zigzag/
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
