--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ processed_data/without_csv/
 processed_data/zigzag_csv/
 processed_data/zigzag/lvm_data_processed.csv
 processed_data/zigzag/zigzag_processed_data.csv
+processed_data/uncertainty_table/
+
 results/
 media/
 
