--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ dependencies = [
   "pandas>=1.5.3", 
   "matplotlib>=3.7.1",
   "ipykernel",
+  "statsmodels",
   "VSM @ git+https://github.com/ocayon/Vortex-Step-Method.git@develop"
 ]
 
